se agrego un parrafo

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
    <h1>hola mundo</h1> 
    <h2>profe</h2>
    <p>hola esterlin</p>
+   <p>parrafo agregado desde la rama feature</p>
 </body>
 </html>
